--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       width: 100%;
       margin: 0;
       padding: 0;
+      overflow: hidden;
     }
     .leaflet-control-zoom,
     .leaflet-control-attribution {
@@ -18,23 +19,24 @@
     }
     #controls {
       position: fixed;
-      bottom: 100px;
+      bottom: 90px;
       left: 50%;
       transform: translateX(-50%);
-      background: #072C4E;
-      padding: 10px 16px;
+      background: rgba(7,44,78,0.9);
+      padding: 12px 18px;
       border-radius: 25px;
       display: flex;
       align-items: center;
+      justify-content: center;
       gap: 12px;
       z-index: 9999;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      box-shadow: 0 0 10px rgba(0,0,0,0.6);
     }
     #controls button {
       background: #0D3F73;
       border: none;
-      width: 45px;
-      height: 45px;
+      width: 55px;
+      height: 55px;
       border-radius: 50%;
       cursor: pointer;
       transition: background 0.2s;
@@ -46,8 +48,8 @@
       background: #155A9C;
     }
     #controls img {
-      width: 22px;
-      height: 22px;
+      width: 26px;
+      height: 26px;
       filter: invert(1);
     }
     #timeBox {
@@ -55,9 +57,9 @@
       bottom: 30px;
       left: 50%;
       transform: translateX(-50%);
-      background: #072C4E;
+      background: rgba(7,44,78,0.9);
       color: white;
-      padding: 8px 20px;
+      padding: 10px 22px;
       border-radius: 15px;
       font-size: 22px;
       font-weight: bold;
@@ -89,21 +91,21 @@
     /* ✅ Responzivita pre mobily */
     @media (max-width: 600px) {
       #controls {
-        bottom: 80px;
-        padding: 8px 12px;
+        bottom: 70px;
+        padding: 8px 14px;
         gap: 8px;
       }
       #controls button {
-        width: 40px;
-        height: 40px;
+        width: 48px;
+        height: 48px;
       }
       #controls img {
-        width: 18px;
-        height: 18px;
+        width: 22px;
+        height: 22px;
       }
       #timeBox {
-        font-size: 16px;
-        padding: 6px 14px;
+        font-size: 18px;
+        padding: 8px 16px;
       }
     }
   </style>
@@ -132,14 +134,17 @@
     maxZoom: 14
   }).addTo(map);
 
-  // ✅ Hranice Slovenska
+  // ✅ Hranice Slovenska – prispôsobené priblíženie pre mobily
   fetch("slovakia_Regions_level_1.geojson")
     .then(r => r.json())
     .then(data => {
       const geo = L.geoJSON(data, {
         style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
       }).addTo(map);
-      map.fitBounds(geo.getBounds().pad(0.25));
+
+      // Prispôsobenie: na mobile menej priestoru okolo
+      const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
+      map.fitBounds(geo.getBounds().pad(padValue));
     });
 
   let radarFrames = [];
@@ -171,7 +176,7 @@
         radarFrames = data.radar.past.concat(data.radar.nowcast);
         currentIndex = data.radar.past.length - 1;
 
-        // ✅ Rýchlejšie načítanie: najprv pridáme posledný snímok
+        // ✅ Rýchle načítanie – najprv posledný snímok
         const lastFrame = radarFrames[currentIndex];
         const lastLayer = L.tileLayer(
           `https://tilecache.rainviewer.com/v2/radar/${lastFrame.path}/256/{z}/{x}/{y}/4/1_1.png`,
@@ -180,7 +185,7 @@
         radarLayers[currentIndex] = lastLayer;
         timeBox.textContent = formatDate(lastFrame.time);
 
-        // ✅ Na pozadí dotiahneme zvyšok
+        // Zvyšné snímky na pozadí
         radarFrames.forEach((frame, i) => {
           if (i !== currentIndex) {
             const layer = L.tileLayer(
@@ -193,7 +198,6 @@
       });
   }
 
-  // ✅ Načítanie pri spustení
   loadRadar();
 
   // ✅ Ovládanie
