--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Radar zrážok</title>
+  <title>Radar zrážok – Mobil optimalizovaný</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
@@ -19,24 +19,24 @@
     }
     #controls {
       position: fixed;
-      bottom: 90px;
+      bottom: 80px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(7,44,78,0.9);
-      padding: 12px 18px;
+      padding: 12px 16px;
       border-radius: 25px;
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 12px;
+      gap: 10px;
       z-index: 9999;
       box-shadow: 0 0 10px rgba(0,0,0,0.6);
     }
     #controls button {
       background: #0D3F73;
       border: none;
-      width: 55px;
-      height: 55px;
+      width: 50px;
+      height: 50px;
       border-radius: 50%;
       cursor: pointer;
       transition: background 0.2s;
@@ -48,25 +48,24 @@
       background: #155A9C;
     }
     #controls img {
-      width: 26px;
-      height: 26px;
+      width: 22px;
+      height: 22px;
       filter: invert(1);
     }
     #timeBox {
       position: fixed;
-      bottom: 30px;
+      bottom: 25px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(7,44,78,0.9);
       color: white;
-      padding: 10px 22px;
-      border-radius: 15px;
-      font-size: 22px;
+      padding: 8px 18px;
+      border-radius: 12px;
+      font-size: 18px;
       font-weight: bold;
       z-index: 9999;
       box-shadow: 0 0 10px rgba(0,0,0,0.5);
       font-family: Arial, sans-serif;
-      text-align: center;
     }
     #attribution {
       position: fixed;
@@ -87,25 +86,23 @@
     #attribution a:hover {
       text-decoration: underline;
     }
-
-    /* ✅ Responzivita pre mobily */
     @media (max-width: 600px) {
       #controls {
-        bottom: 70px;
-        padding: 8px 14px;
+        bottom: 65px;
+        padding: 10px 14px;
         gap: 8px;
       }
       #controls button {
-        width: 48px;
-        height: 48px;
+        width: 44px;
+        height: 44px;
       }
       #controls img {
-        width: 22px;
-        height: 22px;
+        width: 20px;
+        height: 20px;
       }
       #timeBox {
-        font-size: 18px;
-        padding: 8px 16px;
+        font-size: 16px;
+        padding: 6px 14px;
       }
     }
   </style>
@@ -134,24 +131,22 @@
     maxZoom: 14
   }).addTo(map);
 
-  // ✅ Hranice Slovenska – prispôsobené priblíženie pre mobily
+  // ✅ Hranice Slovenska + priblíženie optimalizované pre mobily
   fetch("slovakia_Regions_level_1.geojson")
     .then(r => r.json())
     .then(data => {
       const geo = L.geoJSON(data, {
         style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
       }).addTo(map);
-
-      // Prispôsobenie: na mobile menej priestoru okolo
       const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
       map.fitBounds(geo.getBounds().pad(padValue));
     });
 
   let radarFrames = [];
-  let radarLayers = [];
   let currentIndex = 0;
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
+  let radarLayer = null; // ✅ iba jedna vrstva
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -159,42 +154,28 @@
     return `${days[date.getDay()]} ${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${date.getFullYear()} o ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
   }
 
-  function fadeToFrame(index) {
-    radarLayers.forEach((layer, i) => {
-      layer.setOpacity(i === index ? 0.8 : 0);
-    });
+  function showFrame(index) {
+    if (!radarFrames[index]) return;
+    const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
+
+    if (radarLayer) {
+      radarLayer.setUrl(url);
+    } else {
+      radarLayer = L.tileLayer(url, {opacity: 0.8, crossOrigin: true, updateWhenIdle: true}).addTo(map);
+    }
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
   function loadRadar() {
-    radarLayers.forEach(layer => map.removeLayer(layer));
-    radarLayers = [];
+    if (radarLayer) map.removeLayer(radarLayer);
+    radarLayer = null;
 
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
         radarFrames = data.radar.past.concat(data.radar.nowcast);
-        currentIndex = data.radar.past.length - 1;
-
-        // ✅ Rýchle načítanie – najprv posledný snímok
-        const lastFrame = radarFrames[currentIndex];
-        const lastLayer = L.tileLayer(
-          `https://tilecache.rainviewer.com/v2/radar/${lastFrame.path}/256/{z}/{x}/{y}/4/1_1.png`,
-          {opacity: 0.8, crossOrigin: true, updateWhenIdle: true}
-        ).addTo(map);
-        radarLayers[currentIndex] = lastLayer;
-        timeBox.textContent = formatDate(lastFrame.time);
-
-        // Zvyšné snímky na pozadí
-        radarFrames.forEach((frame, i) => {
-          if (i !== currentIndex) {
-            const layer = L.tileLayer(
-              `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
-              {opacity: 0, crossOrigin: true, updateWhenIdle: true}
-            ).addTo(map);
-            radarLayers[i] = layer;
-          }
-        });
+        currentIndex = data.radar.past.length - 1; // posledný reálny snímok
+        showFrame(currentIndex);
       });
   }
 
@@ -203,12 +184,12 @@
   // ✅ Ovládanie
   document.getElementById("back").onclick = () => {
     currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
-    fadeToFrame(currentIndex);
+    showFrame(currentIndex);
   };
 
   document.getElementById("next").onclick = () => {
     currentIndex = (currentIndex + 1) % radarFrames.length;
-    fadeToFrame(currentIndex);
+    showFrame(currentIndex);
   };
 
   document.getElementById("play").onclick = () => {
@@ -219,8 +200,8 @@
     } else {
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
-        fadeToFrame(currentIndex);
-      }, 500);
+        showFrame(currentIndex);
+      }, 400); // ✅ pomalšie = plynulejšie
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
