--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Radar zrážok + Poloha</title>
+  <title>Radar zrážok + Poloha (vždy funkčná)</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
@@ -146,7 +146,7 @@
       map.fitBounds(geo.getBounds().pad(padValue));
     });
 
-  // ✅ Radarové snímky
+  // ✅ Radar
   let radarFrames = [];
   let currentIndex = 0;
   let playInterval = null;
@@ -181,7 +181,6 @@
         showFrame(currentIndex);
       });
   }
-
   loadRadar();
 
   // ✅ Ovládanie
@@ -208,35 +207,49 @@
   };
   document.getElementById("refresh").onclick = () => loadRadar();
 
-  // ✅ Poloha používateľa s auto-zoomom
+  // ✅ Poloha (GPS + fallback IP)
   let userMarker = null;
-  function locateUser(autoZoom = true) {
+  function showUser(lat, lon, zoom = true) {
+    if (userMarker) map.removeLayer(userMarker);
+    userMarker = L.circleMarker([lat, lon], {
+      radius: 7,
+      color: "#00ffea",
+      fillColor: "#00ffea",
+      fillOpacity: 1
+    }).addTo(map);
+    userMarker.bindPopup("📍 Vaša poloha").openPopup();
+    if (zoom) map.setView([lat, lon], 10);
+  }
+
+  function locateUser() {
     if ("geolocation" in navigator) {
       navigator.geolocation.getCurrentPosition(
         (pos) => {
-          const { latitude, longitude } = pos.coords;
-          if (userMarker) map.removeLayer(userMarker);
-          userMarker = L.circleMarker([latitude, longitude], {
-            radius: 7,
-            color: "#00ffea",
-            fillColor: "#00ffea",
-            fillOpacity: 1
-          }).addTo(map);
-          userMarker.bindPopup("📍 Vaša poloha").openPopup();
-          if (autoZoom) map.setView([latitude, longitude], 10); // priblíži na polohu
+          showUser(pos.coords.latitude, pos.coords.longitude, true);
         },
-        (err) => {
-          console.warn("Poloha nebola povolená: ", err.message);
+        () => {
+          // Fallback cez IP
+          fetch("https://ipapi.co/json/")
+            .then(res => res.json())
+            .then(data => {
+              showUser(data.latitude, data.longitude, true);
+            });
         },
-        { enableHighAccuracy: true, timeout: 5000 }
+        { enableHighAccuracy: true, timeout: 4000 }
       );
+    } else {
+      // Starý prehliadač – rovno IP fallback
+      fetch("https://ipapi.co/json/")
+        .then(res => res.json())
+        .then(data => {
+          showUser(data.latitude, data.longitude, true);
+        });
     }
   }
 
-  // ✅ Spustí sa hneď pri načítaní
-  locateUser(true);
-  // ✅ Tlačidlo na opätovné získanie polohy
-  document.getElementById("locate").onclick = () => locateUser(true);
+  // ✅ Automaticky pri načítaní
+  locateUser();
+  document.getElementById("locate").onclick = () => locateUser();
 </script>
 </body>
 </html>
