--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Radar zrážok + Poloha (stabilná verzia)</title>
+  <title>Radar zrážok</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
@@ -43,8 +43,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 22px;
-      color: white;
     }
     #controls button:hover {
       background: #155A9C;
@@ -97,7 +95,6 @@
       #controls button {
         width: 44px;
         height: 44px;
-        font-size: 18px;
       }
       #controls img {
         width: 20px;
@@ -118,7 +115,6 @@
   <button id="play"><img id="playIcon" src="https://img.icons8.com/ios-filled/50/play.png"></button>
   <button id="next"><img src="https://img.icons8.com/ios-filled/50/fast-forward.png"></button>
   <button id="refresh"><img src="https://img.icons8.com/ios-filled/50/synchronize.png"></button>
-  <button id="locate">📍</button>
 </div>
 <div id="timeBox">Načítavam čas...</div>
 
@@ -129,13 +125,20 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  const map = L.map('map', {zoomControl: false, attributionControl: false});
+  const map = L.map('map', {
+    zoomControl: false,
+    attributionControl: false,
+    preferCanvas: true
+  });
+
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 14
+    maxZoom: 14,
+    updateWhenIdle: true,
+    updateInterval: 200,
+    keepBuffer: 4
   }).addTo(map);
 
-  // ✅ Hranice Slovenska
   fetch("slovakia_Regions_level_1.geojson")
     .then(r => r.json())
     .then(data => {
@@ -146,7 +149,6 @@
       map.fitBounds(geo.getBounds().pad(padValue));
     });
 
-  // ✅ Radar
   let radarFrames = [];
   let currentIndex = 0;
   let playInterval = null;
@@ -165,7 +167,14 @@
     if (radarLayer) {
       radarLayer.setUrl(url);
     } else {
-      radarLayer = L.tileLayer(url, {opacity: 0.8, crossOrigin: true, updateWhenIdle: true}).addTo(map);
+      radarLayer = L.tileLayer(url, {
+        opacity: 0.8,
+        crossOrigin: true,
+        updateWhenIdle: true,
+        updateInterval: 200,
+        keepBuffer: 4,
+        tileSize: 256
+      }).addTo(map);
     }
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
@@ -181,17 +190,19 @@
         showFrame(currentIndex);
       });
   }
+
   loadRadar();
 
-  // ✅ Ovládanie
   document.getElementById("back").onclick = () => {
     currentIndex = (currentIndex - 1 + radarFrames.length) % radarFrames.length;
     showFrame(currentIndex);
   };
+
   document.getElementById("next").onclick = () => {
     currentIndex = (currentIndex + 1) % radarFrames.length;
     showFrame(currentIndex);
   };
+
   document.getElementById("play").onclick = () => {
     if (playInterval) {
       clearInterval(playInterval);
@@ -205,38 +216,8 @@
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
+
   document.getElementById("refresh").onclick = () => loadRadar();
-
-  // ✅ Poloha – stabilná
-  let userMarker = null;
-  function locateUser() {
-    if ("geolocation" in navigator) {
-      navigator.geolocation.getCurrentPosition(
-        (pos) => {
-          const { latitude, longitude } = pos.coords;
-          if (userMarker) map.removeLayer(userMarker);
-          userMarker = L.circleMarker([latitude, longitude], {
-            radius: 7,
-            color: "#00ffea",
-            fillColor: "#00ffea",
-            fillOpacity: 1
-          }).addTo(map);
-          userMarker.bindPopup("📍 Vaša poloha").openPopup();
-          map.setView([latitude, longitude], 10);
-        },
-        (err) => {
-          // ❌ Ak nepovolí alebo zlyhá určovanie, nič sa nedeje, mapa ostáva na Slovensku
-          console.warn("Poloha nedostupná alebo nepovolená:", err.message);
-        },
-        { enableHighAccuracy: true, timeout: 5000 }
-      );
-    } else {
-      console.warn("Prehliadač nepodporuje geolokáciu.");
-    }
-  }
-
-  locateUser();
-  document.getElementById("locate").onclick = () => locateUser();
 </script>
 </body>
 </html>
