--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
+  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null;
+
   const map = L.map('map', {
     zoomControl: false,
     attributionControl: false,
@@ -139,14 +141,20 @@
     keepBuffer: 4
   }).addTo(map);
 
+  if (savedPos) {
+    map.setView([savedPos.lat, savedPos.lng], savedPos.zoom);
+  }
+
   fetch("slovakia_Regions_level_1.geojson")
     .then(r => r.json())
     .then(data => {
       const geo = L.geoJSON(data, {
         style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
       }).addTo(map);
-      const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
-      map.fitBounds(geo.getBounds().pad(padValue));
+      if (!savedPos) {
+        const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
+        map.fitBounds(geo.getBounds().pad(padValue));
+      }
     });
 
   let radarFrames = [];
@@ -154,6 +162,7 @@
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
   let radarLayer = null;
+  let reloadTimeout = null;
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -218,6 +227,24 @@
   };
 
   document.getElementById("refresh").onclick = () => loadRadar();
+
+  map.on("moveend", () => {
+    const center = map.getCenter();
+    localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
+  });
+
+  map.on("movestart", () => {
+    if (radarLayer) radarLayer.setOpacity(0);
+    if (reloadTimeout) clearTimeout(reloadTimeout);
+  });
+
+  map.on("moveend", () => {
+    if (radarLayer) {
+      reloadTimeout = setTimeout(() => {
+        radarLayer.setOpacity(0.8);
+      }, 300);
+    }
+  });
 </script>
 </body>
 </html>
