--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
   L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
     maxZoom: 14,
-    pane: 'overlayPane',
     zIndex: 999
   }).addTo(map);
 
@@ -165,7 +164,7 @@
   let currentIndex = 0;
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
-  let radarLayer = null;
+  let radarLayer = L.tileLayer('', {opacity: 0.8}).addTo(map);
   let reloadTimeout = null;
 
   function formatDate(timestamp) {
@@ -177,23 +176,11 @@
   function showFrame(index) {
     if (!radarFrames[index]) return;
     const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
-    if (radarLayer) {
-      radarLayer.setUrl(url);
-    } else {
-      radarLayer = L.tileLayer(url, {
-        opacity: 0.8,
-        crossOrigin: true,
-        updateWhenIdle: true,
-        keepBuffer: 6,
-        tileSize: 256
-      }).addTo(map);
-    }
+    radarLayer.setUrl(url);
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
   function loadRadar() {
-    if (radarLayer) map.removeLayer(radarLayer);
-    radarLayer = null;
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
@@ -234,15 +221,18 @@
   map.on("moveend", () => {
     const center = map.getCenter();
     localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
-    if (!radarLayer) return;
-    clearTimeout(reloadTimeout);
-    reloadTimeout = setTimeout(() => {
-      showFrame(currentIndex);
-    }, 300);
   });
 
   map.on("movestart", () => {
-    if (radarLayer) radarLayer.setOpacity(0);
+    if (radarLayer) radarLayer.setOpacity(0.5);
+  });
+
+  map.on("moveend", () => {
+    clearTimeout(reloadTimeout);
+    reloadTimeout = setTimeout(() => {
+      if (radarLayer) radarLayer.setOpacity(0.8);
+      showFrame(currentIndex);
+    }, 300);
   });
 </script>
 </body>
