--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Radar zrážok – Plynulý (Freeze)</title>
+  <title>Radar zrážok – Plynulý bez freeze</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
@@ -105,21 +105,10 @@
         padding: 6px 14px;
       }
     }
-    #radarFreeze {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      z-index: 500;
-      display: none;
-    }
   </style>
 </head>
 <body>
 <div id="map"></div>
-<canvas id="radarFreeze"></canvas>
 
 <div id="controls">
   <button id="back"><img src="https://img.icons8.com/ios-filled/50/rewind.png"></button>
@@ -175,10 +164,12 @@
   let currentIndex = 0;
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
-  let radarLayer = L.tileLayer('', {opacity: 0.8}).addTo(map);
-
-  const radarFreezeCanvas = document.getElementById("radarFreeze");
-  const ctx = radarFreezeCanvas.getContext("2d");
+  let radarLayer = L.tileLayer('', {
+    opacity: 0.8,
+    updateWhenIdle: true,
+    updateInterval: 800,
+    keepBuffer: 8
+  }).addTo(map);
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -234,22 +225,7 @@
   map.on("moveend", () => {
     const center = map.getCenter();
     localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
-    radarFreezeCanvas.style.display = "none";
-    showFrame(currentIndex);
-  });
-
-  map.on("movestart", () => {
-    const mapContainer = map.getContainer();
-    radarFreezeCanvas.width = mapContainer.clientWidth;
-    radarFreezeCanvas.height = mapContainer.clientHeight;
-    ctx.clearRect(0, 0, radarFreezeCanvas.width, radarFreezeCanvas.height);
-
-    html2canvas(mapContainer, {useCORS: true}).then(canvas => {
-      ctx.drawImage(canvas, 0, 0);
-      radarFreezeCanvas.style.display = "block";
-    });
   });
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </body>
 </html>
