--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Radar zrážok – Plynulý bez freeze</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <title>Radar zrážok</title>
+  <link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet" />
   <style>
-    html, body, #map {
+    html, body {
       height: 100%;
-      width: 100%;
       margin: 0;
       padding: 0;
       overflow: hidden;
     }
-    .leaflet-control-zoom,
-    .leaflet-control-attribution {
-      display: none;
+    #map {
+      width: 100%;
+      height: 100%;
     }
     #controls {
       position: fixed;
@@ -123,53 +122,41 @@
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
 </div>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
 <script>
-  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null;
+  const savedPos = JSON.parse(localStorage.getItem("mapPosGL")) || null;
 
-  const map = L.map('map', {
-    zoomControl: false,
-    attributionControl: false,
-    preferCanvas: true
+  const map = new maplibregl.Map({
+    container: 'map',
+    style: {
+      "version": 8,
+      "sources": {
+        "dark": {
+          "type": "raster",
+          "tiles": ["https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png"],
+          "tileSize": 256,
+          "attribution": "© OpenStreetMap & CARTO"
+        },
+        "labels": {
+          "type": "raster",
+          "tiles": ["https://{a-c}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png"],
+          "tileSize": 256
+        }
+      },
+      "layers": [
+        {"id": "dark", "type": "raster", "source": "dark"},
+        {"id": "labels", "type": "raster", "source": "labels"}
+      ]
+    },
+    center: savedPos ? [savedPos.lng, savedPos.lat] : [19.7, 48.7],
+    zoom: savedPos ? savedPos.zoom : 7
   });
-
-  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
-    subdomains: 'abcd',
-    maxZoom: 14
-  }).addTo(map);
-
-  L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
-    subdomains: 'abcd',
-    maxZoom: 14,
-    zIndex: 999
-  }).addTo(map);
-
-  if (savedPos) {
-    map.setView([savedPos.lat, savedPos.lng], savedPos.zoom);
-  }
-
-  fetch("slovakia_Regions_level_1.geojson")
-    .then(r => r.json())
-    .then(data => {
-      const geo = L.geoJSON(data, {
-        style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
-      }).addTo(map);
-      if (!savedPos) {
-        const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
-        map.fitBounds(geo.getBounds().pad(padValue));
-      }
-    });
 
   let radarFrames = [];
   let currentIndex = 0;
   let playInterval = null;
+  let radarSourceAdded = false;
   const timeBox = document.getElementById("timeBox");
-  let radarLayer = L.tileLayer('', {
-    opacity: 0.8,
-    updateWhenIdle: true,
-    updateInterval: 800,
-    keepBuffer: 8
-  }).addTo(map);
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -180,7 +167,26 @@
   function showFrame(index) {
     if (!radarFrames[index]) return;
     const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
-    radarLayer.setUrl(url);
+
+    if (!radarSourceAdded) {
+      map.addSource('radar', {
+        type: 'raster',
+        tiles: [url],
+        tileSize: 256
+      });
+      map.addLayer({
+        id: 'radar-layer',
+        type: 'raster',
+        source: 'radar',
+        paint: {"raster-opacity": 0.8}
+      });
+      radarSourceAdded = true;
+    } else {
+      map.getSource('radar').tiles = [url];
+      map.style.sourceCaches['radar'].clearTiles();
+      map.style.sourceCaches['radar'].update(map.transform);
+    }
+
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
@@ -224,7 +230,7 @@
 
   map.on("moveend", () => {
     const center = map.getCenter();
-    localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
+    localStorage.setItem("mapPosGL", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
   });
 </script>
 </body>
