--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Radar zrážok</title>
-  <link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
-    html, body {
+    html, body, #map {
       height: 100%;
+      width: 100%;
       margin: 0;
       padding: 0;
-      overflow: hidden;
     }
-    #map {
-      width: 100%;
-      height: 100%;
+    .leaflet-control-zoom,
+    .leaflet-control-attribution {
+      display: none;
     }
     #controls {
       position: fixed;
@@ -122,41 +122,30 @@
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
 </div>
 
-<script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  const savedPos = JSON.parse(localStorage.getItem("mapPosGL")) || null;
+  const map = L.map('map', {zoomControl: false, attributionControl: false});
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+    subdomains: 'abcd',
+    maxZoom: 14
+  }).addTo(map);
 
-  const map = new maplibregl.Map({
-    container: 'map',
-    style: {
-      "version": 8,
-      "sources": {
-        "dark": {
-          "type": "raster",
-          "tiles": ["https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png"],
-          "tileSize": 256,
-          "attribution": "© OpenStreetMap & CARTO"
-        },
-        "labels": {
-          "type": "raster",
-          "tiles": ["https://{a-c}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png"],
-          "tileSize": 256
-        }
-      },
-      "layers": [
-        {"id": "dark", "type": "raster", "source": "dark"},
-        {"id": "labels", "type": "raster", "source": "labels"}
-      ]
-    },
-    center: savedPos ? [savedPos.lng, savedPos.lat] : [19.7, 48.7],
-    zoom: savedPos ? savedPos.zoom : 7
-  });
+  // ✅ Hranice Slovenska
+  fetch("slovakia_Regions_level_1.geojson")
+    .then(r => r.json())
+    .then(data => {
+      const geo = L.geoJSON(data, {
+        style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
+      }).addTo(map);
+      const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
+      map.fitBounds(geo.getBounds().pad(padValue));
+    });
 
   let radarFrames = [];
   let currentIndex = 0;
   let playInterval = null;
-  let radarSourceAdded = false;
   const timeBox = document.getElementById("timeBox");
+  let radarLayer = null;
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -168,29 +157,24 @@
     if (!radarFrames[index]) return;
     const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
 
-    if (!radarSourceAdded) {
-      map.addSource('radar', {
-        type: 'raster',
-        tiles: [url],
-        tileSize: 256
-      });
-      map.addLayer({
-        id: 'radar-layer',
-        type: 'raster',
-        source: 'radar',
-        paint: {"raster-opacity": 0.8}
-      });
-      radarSourceAdded = true;
+    if (radarLayer) {
+      radarLayer.setUrl(url);
     } else {
-      map.getSource('radar').tiles = [url];
-      map.style.sourceCaches['radar'].clearTiles();
-      map.style.sourceCaches['radar'].update(map.transform);
+      radarLayer = L.tileLayer(url, {
+        opacity: 0.8,
+        crossOrigin: true,
+        keepBuffer: 5,
+        updateWhenZooming: false,
+        updateWhenIdle: true
+      }).addTo(map);
     }
-
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
   function loadRadar() {
+    if (radarLayer) map.removeLayer(radarLayer);
+    radarLayer = null;
+
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
@@ -221,17 +205,12 @@
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
         showFrame(currentIndex);
-      }, 400);
+      }, 450);
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
 
   document.getElementById("refresh").onclick = () => loadRadar();
-
-  map.on("moveend", () => {
-    const center = map.getCenter();
-    localStorage.setItem("mapPosGL", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
-  });
 </script>
 </body>
 </html>
