--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       width: 100%;
       margin: 0;
       padding: 0;
+      overflow: hidden;
     }
     .leaflet-control-zoom,
     .leaflet-control-attribution {
@@ -124,21 +125,38 @@
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-  const map = L.map('map', {zoomControl: false, attributionControl: false});
+  const savedPos = JSON.parse(localStorage.getItem("mapPos")) || null;
+
+  const map = L.map('map', {
+    zoomControl: false,
+    attributionControl: false,
+    preferCanvas: true,
+    zoomAnimation: false,
+    fadeAnimation: false
+  });
+
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 14
+    maxZoom: 14,
+    keepBuffer: 8,
+    updateWhenZooming: false,
+    updateWhenIdle: true
   }).addTo(map);
 
-  // ✅ Hranice Slovenska
+  if (savedPos) {
+    map.setView([savedPos.lat, savedPos.lng], savedPos.zoom);
+  }
+
   fetch("slovakia_Regions_level_1.geojson")
     .then(r => r.json())
     .then(data => {
       const geo = L.geoJSON(data, {
         style: {color: "#00bfff", weight: 1.5, fillOpacity: 0}
       }).addTo(map);
-      const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
-      map.fitBounds(geo.getBounds().pad(padValue));
+      if (!savedPos) {
+        const padValue = window.innerWidth < 600 ? 0.05 : 0.25;
+        map.fitBounds(geo.getBounds().pad(padValue));
+      }
     });
 
   let radarFrames = [];
@@ -156,14 +174,13 @@
   function showFrame(index) {
     if (!radarFrames[index]) return;
     const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
-
     if (radarLayer) {
       radarLayer.setUrl(url);
     } else {
       radarLayer = L.tileLayer(url, {
         opacity: 0.8,
         crossOrigin: true,
-        keepBuffer: 5,
+        keepBuffer: 8,
         updateWhenZooming: false,
         updateWhenIdle: true
       }).addTo(map);
@@ -174,7 +191,6 @@
   function loadRadar() {
     if (radarLayer) map.removeLayer(radarLayer);
     radarLayer = null;
-
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
@@ -205,12 +221,17 @@
       playInterval = setInterval(() => {
         currentIndex = (currentIndex + 1) % radarFrames.length;
         showFrame(currentIndex);
-      }, 450);
+      }, 400);
       document.getElementById("playIcon").src = "https://img.icons8.com/ios-filled/50/pause.png";
     }
   };
 
   document.getElementById("refresh").onclick = () => loadRadar();
+
+  map.on("moveend", () => {
+    const center = map.getCenter();
+    localStorage.setItem("mapPos", JSON.stringify({lat: center.lat, lng: center.lng, zoom: map.getZoom()}));
+  });
 </script>
 </body>
 </html>
