--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Radar zrážok</title>
+  <title>Radar zrážok/<title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     html, body, #map {
@@ -86,30 +86,10 @@
     #attribution a:hover {
       text-decoration: underline;
     }
-    @media (max-width: 600px) {
-      #controls {
-        bottom: 65px;
-        padding: 10px 14px;
-        gap: 8px;
-      }
-      #controls button {
-        width: 44px;
-        height: 44px;
-      }
-      #controls img {
-        width: 20px;
-        height: 20px;
-      }
-      #timeBox {
-        font-size: 16px;
-        padding: 6px 14px;
-      }
-    }
   </style>
 </head>
 <body>
 <div id="map"></div>
-
 <div id="controls">
   <button id="back"><img src="https://img.icons8.com/ios-filled/50/rewind.png"></button>
   <button id="play"><img id="playIcon" src="https://img.icons8.com/ios-filled/50/play.png"></button>
@@ -117,7 +97,6 @@
   <button id="refresh"><img src="https://img.icons8.com/ios-filled/50/synchronize.png"></button>
 </div>
 <div id="timeBox">Načítavam čas...</div>
-
 <div id="attribution">
   Map data © <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a> &amp;
   <a href="https://www.rainviewer.com" target="_blank">RainViewer</a>
@@ -135,7 +114,10 @@
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     subdomains: 'abcd',
-    maxZoom: 14
+    maxZoom: 14,
+    keepBuffer: 8,
+    updateWhenZooming: false,
+    updateWhenIdle: true
   }).addTo(map);
 
   L.tileLayer('https://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}{r}.png', {
@@ -161,10 +143,10 @@
     });
 
   let radarFrames = [];
+  let radarLayers = [];
   let currentIndex = 0;
   let playInterval = null;
   const timeBox = document.getElementById("timeBox");
-  let radarLayer = L.tileLayer('', {opacity: 0.8}).addTo(map);
 
   function formatDate(timestamp) {
     const date = new Date(timestamp * 1000);
@@ -173,18 +155,32 @@
   }
 
   function showFrame(index) {
-    if (!radarFrames[index]) return;
-    const url = `https://tilecache.rainviewer.com/v2/radar/${radarFrames[index].path}/256/{z}/{x}/{y}/4/1_1.png`;
-    radarLayer.setUrl(url);
+    radarLayers.forEach((layer, i) => {
+      layer.setOpacity(i === index ? 0.8 : 0);
+    });
     timeBox.textContent = formatDate(radarFrames[index].time);
   }
 
   function loadRadar() {
+    radarLayers.forEach(layer => map.removeLayer(layer));
+    radarLayers = [];
     fetch("https://api.rainviewer.com/public/weather-maps.json")
       .then(r => r.json())
       .then(data => {
         radarFrames = data.radar.past.concat(data.radar.nowcast);
         currentIndex = data.radar.past.length - 1;
+        radarFrames.forEach((frame, i) => {
+          const layer = L.tileLayer(
+            `https://tilecache.rainviewer.com/v2/radar/${frame.path}/256/{z}/{x}/{y}/4/1_1.png`,
+            {
+              opacity: 0,
+              crossOrigin: true,
+              keepBuffer: 8,
+              updateWhenIdle: true
+            }
+          ).addTo(map);
+          radarLayers[i] = layer;
+        });
         showFrame(currentIndex);
       });
   }
