--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background: #0b0b0b; /* ✅ tmavé pozadie namiesto bieleho efektu */
+      background: #0b0b0b; ✅ 
     }
     #controls {
       position: fixed;
